# segmentation-models-pytorch-test2

./: .gitignore  README.md  main.py  pyproject.toml  train.py  visualize_dataset.py
src/: dataset.py  model.py
src/segmentation_models_pytorch/: __init__.py
