[project]
name = "segmentation-models-pytorch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MURAKI Taichi", email = "muraki.taichi@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "segmentation_models_pytorch:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/segmentation_models_pytorch"]
